src/objects/IncentiveProject__c.object
<CustomObject>
    <fields>
        <fullName>PRStatus__c</fullName>
        <formula>IF( 
PaymentRequest__c =&quot;&quot;, &quot;N/A&quot;, TEXT( PaymentRequest__r.EnrollmentStatus__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PR Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentEnrollmentStatus__c</fullName>
        <formula>TEXT(Aggregated_Parent_Project__r.EnrollmentPlan__r.EnrollmentStatus__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Enrollment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentRequest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Current pending or processed payment request</inlineHelpText>
        <label>Payment Request</label>
        <referenceTo>EnrollmentPlan__c</referenceTo>
        <relationshipLabel>Incentive Projects (Payment Request)</relationshipLabel>
        <relationshipName>Incentive_Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pilot__c</fullName>
        <label>Pilot</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProjectAccountantEmail__c</fullName>
        <description>Project Accountant Email</description>
        <label>Project Accountant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ProjectAccountantText__c</fullName>
        <description>Project Accountant Name</description>
        <label>Project AccountantText</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectAccountant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Accountant Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Incentive_Projects4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectCreationDate__c</fullName>
        <label>Project Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProjectDirectorEmail__c</fullName>
        <description>Project Director Email</description>
        <label>Project Director Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ProjectDirectorText__c</fullName>
        <description>Project Director Name</description>
        <label>Project DirectorText</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectDirector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Director Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Incentive_Projects3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectID__c</fullName>
        <externalId>true</externalId>
        <label>Project Number</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ProjectManagerEmail__c</fullName>
        <description>Project Manager E-Mail Address</description>
        <label>Project Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ProjectManagerEmpNo__c</fullName>
        <label>Project Manager Emp No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Incentive_Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectNameStatus__c</fullName>
        <description>Reports Only Field</description>
        <formula>Name &amp; &quot; - &quot; &amp; ProjectStatus__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name - Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectNameText__c</fullName>
        <description>Used as a field update in Workflow to ensure no duplicate Incentive Project Names can be created.</description>
        <label>Project Name Text</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectStartDate__c</fullName>
        <description>Displays the project&apos;s start date per AECOM&apos;s Insight.</description>
        <inlineHelpText>Displays the project&apos;s start date per AECOM&apos;s Insight.</inlineHelpText>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProjectStatus__c</fullName>
        <label>Project Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_ManagerText__c</fullName>
        <label>Project ManagerText</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegionDescription__c</fullName>
        <label>Sub-Region or Area</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReplyTo__c</fullName>
        <description>Translates the SuperGeo into the appropriate Reply To e-mail address, used in e-mail alerts</description>
        <formula>CASE(
      SuperGeography__c , 
                     &quot;Americas&quot;, &quot;americasdtwincentiveplan@aecom.com&quot;, 
                     &quot;EMEA&quot;, &quot;emeadtwincentiveplan@aecom.com&quot;,
                     &quot;EMEAI&quot;, &quot;emeadtwincentiveplan@aecom.com&quot;,
                     &quot;APAC&quot;, &quot;apacdtwincentiveplan@aecom.com&quot;, &quot;&quot;
     )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reply To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoutingMemberRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Routing Member Rule Applied to Determine the Incentive Project DTW Admin</inlineHelpText>
        <label>Routing Member Rule</label>
        <referenceTo>RoutingMember__c</referenceTo>
        <relationshipLabel>Incentive Projects</relationshipLabel>
        <relationshipName>Incentive_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ScheduledFinishDate__c</fullName>
        <description>Displays the current expected completion date of the project</description>
        <inlineHelpText>Displays the current expected completion date of the project</inlineHelpText>
        <label>Scheduled Finish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SuperGeography__c</fullName>
        <label>Super Geography</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TMPContractTypeEligibility__c</fullName>
        <description>Indicates whether or not a project meets current Contract Type eligibility requirements for the T&amp;M Plan.</description>
        <inlineHelpText>Indicates whether or not a project meets current Contract Type eligibility requirements for the T&amp;M Plan.</inlineHelpText>
        <label>T&amp;M Plan Contract Type Eligibility</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TMPProjectSizeEligibility__c</fullName>
        <description>Indicates whether or not a project meets current size eligibility requirements for the T&amp;M Plan.  Most often dictated by Budgeted NSR.</description>
        <inlineHelpText>Indicates whether or not a project meets current size eligibility requirements for the T&amp;M Plan.  Most often dictated by Budgeted NSR.</inlineHelpText>
        <label>T&amp;M Plan Project Size Eligibility</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TMPlanOverallEligibility__c</fullName>
        <description>Indicates whether or not the project meets all current eligibility requirements for the T&amp;M Plan.</description>
        <inlineHelpText>Indicates whether or not the project meets all current eligibility requirements for the T&amp;M Plan.</inlineHelpText>
        <label>T&amp;M Plan Overall Eligibility</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TotalUnbilled__c</fullName>
        <description>Total Unbilled</description>
        <label>Total Unbilled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WorkflowOwner__c</fullName>
        <description>Displays the name of the person whose action is required to advance this form</description>
        <formula>IF(EnrollmentPlan__c = &quot;&quot;,   Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName,
    EnrollmentPlan__r.WorkflowOwner__c )</formula>
        <inlineHelpText>Displays the name of the person whose action is required to advance this form</inlineHelpText>
        <label>Current Form Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X30_Day_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>30 Day Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X60DaysClosed__c</fullName>
        <formula>TEXT(EnrollmentPlan__r.X60DaysClosed__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>60 Days Closed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X60_Day_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>60 Day Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <label>Incentive Project</label>
    <listViews>
        <fullName>AggregatedProjects</fullName>
        <columns>NAME</columns>
        <columns>EnrollmentStatus__c</columns>
        <columns>ProjectID__c</columns>
        <columns>AgreementNumber__c</columns>
        <columns>AggregatorAutonumber__c</columns>
        <columns>Aggregated_Project__c</columns>
        <columns>Aggregated_Parent_Project__c</columns>
        <columns>OrgCarryingOutProject__c</columns>
        <columns>CustomerName__c</columns>
        <columns>GRBacklog__c</columns>
        <columns>CountEnrollmentPlan__c</columns>
        <columns>DistrictDescription__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IncentiveProject__c.AGGR_Child_Record,IncentiveProject__c.Aggregated_Project</value>
        </filters>
        <label>Aggregated Projects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllClosedProjects</fullName>
        <columns>ProjectID__c</columns>
        <columns>NAME</columns>
        <columns>ProjectStatus__c</columns>
        <columns>CustomerName__c</columns>
        <columns>ContractType__c</columns>
        <columns>ProjectStartDate__c</columns>
        <columns>ScheduledFinishDate__c</columns>
        <columns>EnrollmentStatus__c</columns>
        <columns>GRBacklog__c</columns>
        <columns>RegionDescription__c</columns>
        <columns>GeographyDescription__c</columns>
        <columns>SuperGeography__c</columns>
        <columns>ProjectManager__c</columns>
        <columns>FPPOverallEligibility__c</columns>
        <columns>TMPlanOverallEligibility__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProjectStatus__c</field>
            <operation>contains</operation>
            <value>Closed</value>
        </filters>
        <label>AllClosedProjects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_CPFF_Projects</fullName>
        <columns>ProjectID__c</columns>
        <columns>NAME</columns>
        <columns>OrgCarryingOutProject__c</columns>
        <columns>CustomerName__c</columns>
        <columns>ContractType__c</columns>
        <columns>ProjectStartDate__c</columns>
        <columns>ScheduledFinishDate__c</columns>
        <columns>EnrollmentStatus__c</columns>
        <columns>GRBacklog__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RegionDescription__c</columns>
        <columns>GeographyDescription__c</columns>
        <columns>DTWAdminInitiated__c</columns>
        <columns>ProjectManager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ContractType__c</field>
            <operation>startsWith</operation>
            <value>CPFF</value>
        </filters>
        <label>All CPFF Projects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Closed_Projects</fullName>
        <columns>NAME</columns>
        <columns>ProjectStatus__c</columns>
        <columns>EnrollmentStatus__c</columns>
        <columns>ProjectID__c</columns>
        <columns>CustomerName__c</columns>
        <columns>GRBacklog__c</columns>
        <columns>CountofParticipants__c</columns>
        <columns>EACasofDate__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>DTWAdmin__c</columns>
        <columns>ProjectManager__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ProjectStatus__c</field>
            <operation>contains</operation>
            <value>Close</value>
        </filters>
        <label>All Closed Projects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Closed_Projects_w_Apps</fullName>
        <columns>NAME</columns>
        <columns>ProjectStatus__c</columns>
        <columns>EnrollmentStatus__c</columns>
        <columns>ProjectID__c</columns>
        <columns>CustomerName__c</columns>
        <columns>GRBacklog__c</columns>
        <columns>CountofParticipants__c</columns>
        <columns>EACasofDate__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>DTWAdmin__c</columns>
        <columns>ProjectManager__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ProjectStatus__c</field>
            <operation>contains</operation>
            <value>Close</value>
        </filters>
        <filters>
            <field>EnrollmentPlan__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Closed Projects w/Apps</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Contract_Values</fullName>
        <columns>ProjectID__c</columns>
        <columns>NAME</columns>
        <columns>OrgCarryingOutProject__c</columns>
        <columns>CustomerName__c</columns>
        <columns>ContractType__c</columns>
        <columns>ContractTypeShortName__c</columns>
        <columns>ProjectStartDate__c</columns>
        <columns>ScheduledFinishDate__c</columns>
        <columns>EnrollmentStatus__c</columns>
        <columns>GRBacklog__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RegionDescription__c</columns>
        <columns>GeographyDescription__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ContractType__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>ContractType__c</field>
            <operation>notEqual</operation>
            <value>[empty]</value>
        </filters>
        <label>All Contract Values</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Eligible_for_both_CK</fullName>
        <columns>ProjectID__c</columns>
        <columns>NAME</columns>
        <columns>ApprovedGrossRevenueBudget__c</columns>
        <columns>ActualPercentProjectCompleteITD__c</columns>
        <columns>CustomerName__c</columns>
        <columns>ContractType__c</columns>
        <columns>ProjectStartDate__c</columns>
        <columns>ScheduledFinishDate__c</columns>
        <columns>EnrollmentStatus__c</columns>
        <columns>GRBacklog__c</columns>
        <columns>RegionDescription__c</columns>
        <columns>GeographyDescription__c</columns>
        <columns>ProjectManager__c</columns>
        <columns>ProjectStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FPPOverallEligibility__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>TMPlanOverallEligibility__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>GeographyDescription__c</field>
            <operation>equals</operation>
            <value>Pacific</value>
        </filters>
        <filters>
            <field>EnrollmentStatus__c</field>
            <operation>equals</operation>
            <value>Pending DTW Action</value>
        </filters>
        <label>All - Eligible for both - CK</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Eligible_for_both_gt</fullName>
        <columns>ProjectID__c</columns>
        <columns>NAME</columns>
        <columns>ApprovedGrossRevenueBudget__c</columns>
        <columns>ActualPercentProjectCompleteITD__c</columns>
        <columns>CustomerName__c</columns>
        <columns>ContractType__c</columns>
        <columns>ProjectStartDate__c</columns>
        <columns>ScheduledFinishDate__c</columns>
        <columns>EnrollmentStatus__c</columns>
        <columns>GRBacklog__c</columns>
        <columns>RegionDescription__c</columns>
        <columns>GeographyDescription__c</columns>
        <columns>ProjectManager__c</columns>
        <columns>ProjectStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FPPOverallEligibility__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>TMPlanOverallEligibility__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>GeographyDescription__c</field>
            <operation>equals</operation>
            <value>Pacific</value>
        </filters>
        <filters>
            <field>EnrollmentStatus__c</field>
            <operation>equals</operation>
            <value>Pending DTW Action</value>
        </filters>
        <filters>
            <field>GeographyDescription__c</field>
            <operation>equals</operation>
            <value>middle east</value>
        </filters>
        <label>All - Eligible for both - GT</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Fixed_Price</fullName>
        <columns>ProjectStatus__c</columns>
        <columns>ProjectID__c</columns>
        <columns>NAME</columns>
        <columns>OrgCarryingOutProject__c</columns>
        <columns>CustomerName__c</columns>
        <columns>ContractType__c</columns>
        <columns>ProjectStartDate__c</columns>
        <columns>ScheduledFinishDate__c</columns>
        <columns>EnrollmentStatus__c</columns>
        <columns>GRBacklog__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RegionDescription__c</columns>
        <columns>GeographyDescription__c</columns>
        <columns>DTWAdminInitiated__c</columns>
        <columns>ProjectManager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ContractType__c</field>
            <operation>startsWith</operation>
            <value>Fixed</value>
        </filters>
        <label>All Fixed Price</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Non_Eligible_Projects</fullName>
        <columns>NAME</columns>
        <columns>EnrollmentStatus__c</columns>
        <columns>ProjectID__c</columns>
        <columns>OrgCarryingOutProject__c</columns>
        <columns>CustomerName__c</columns>
        <columns>GRBacklog__c</columns>
        <columns>CountEnrollmentPlan__c</columns>
        <columns>CountofParticipants__c</columns>
        <columns>EACasofDate__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>DistrictDescription__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OrgCarryingOutProject__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>FPPOverallEligibility__c</field>
            <operation>equals</operation>
            <value>No</value>
        </filters>
        <filters>
            <field>TMPlanOverallEligibility__c</field>
            <operation>equals</operation>
            <value>No</value>
        </filters>
        <label>All Non-Eligible Projects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Pending_DTW_Action_No_Apps</fullName>
        <columns>ProjectID__c</columns>
        <columns>NAME</columns>
        <columns>ActualGrossRevenueITD__c</columns>
        <columns>DTW_Admin_Status__c</columns>
        <columns>CustomerName__c</columns>
        <columns>ContractType__c</columns>
        <columns>ProjectStartDate__c</columns>
        <columns>GRBacklog__c</columns>
        <columns>GeographyDescription__c</columns>
        <columns>DistrictDescription__c</columns>
        <columns>ProjectManager__c</columns>
        <columns>FPPOverallEligibility__c</columns>
        <columns>EnrollmentPlan__c</columns>
        <columns>OrgCarryingOutProject__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EnrollmentStatus__c</field>
            <operation>equals</operation>
            <value>Pending DTW Action</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IncentiveProject__c.Incentive_Project</value>
        </filters>
        <label>All Pending DTW Action (No Apps)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Time_and_Material</fullName>
        <columns>ProjectID__c</columns>
        <columns>NAME</columns>
        <columns>OrgCarryingOutProject__c</columns>
        <columns>CustomerName__c</columns>
        <columns>ContractType__c</columns>
        <columns>ProjectStartDate__c</columns>
        <columns>ScheduledFinishDate__c</columns>
        <columns>EnrollmentStatus__c</columns>
        <columns>GRBacklog__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RegionDescription__c</columns>
        <columns>GeographyDescription__c</columns>
        <columns>DTWAdminInitiated__c</columns>
        <columns>ProjectManager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ContractType__c</field>
            <operation>startsWith</operation>
            <value>T&amp;M</value>
        </filters>
        <label>All Time and Material</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Allgt</fullName>
        <columns>ProjectID__c</columns>
        <columns>NAME</columns>
        <columns>CustomerName__c</columns>
        <columns>ContractType__c</columns>
        <columns>ProjectStartDate__c</columns>
        <columns>ProjectStatus__c</columns>
        <columns>ScheduledFinishDate__c</columns>
        <columns>EnrollmentStatus__c</columns>
        <columns>GRBacklog__c</columns>
        <columns>RegionDescription__c</columns>
        <columns>GeographyDescription__c</columns>
        <columns>SuperGeography__c</columns>
        <columns>ProjectManager__c</columns>
        <columns>FPPOverallEligibility__c</columns>
        <columns>TMPlanOverallEligibility__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GeographyDescription__c</field>
            <operation>equals</operation>
            <value>middle east</value>
        </filters>
        <filters>
            <field>ContractType__c</field>
            <operation>contains</operation>
            <value>fixed price</value>
        </filters>
        <label>Allgt</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Carmen_s_T_M_Eligible_Projects_ANZ</fullName>
        <columns>ProjectID__c</columns>
        <columns>NAME</columns>
        <columns>ContractType__c</columns>
        <columns>EnrollmentStatus__c</columns>
        <columns>WorkflowOwner__c</columns>
        <columns>ProjectStartDate__c</columns>
        <columns>ScheduledFinishDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EnrollmentStatus__c</field>
            <operation>equals</operation>
            <value>Pending DTW Action</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IncentiveProject__c.Incentive_Project</value>
        </filters>
        <filters>
            <field>GeographyDescription__c</field>
            <operation>equals</operation>
            <value>ANZ</value>
        </filters>
        <filters>
            <field>TMPlanOverallEligibility__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>Carmen&apos;s T&amp;M Eligible Projects ANZ</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DTWIneligibleQueue_IncentiveProject</fullName>
        <filterScope>Queue</filterScope>
        <label>DTW Ineligible Queue</label>
        <queue>DTWIneligibleQueue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incentive Projects</pluralLabel>
    <recordTypes>
        <fullName>AGGR_Child_Record</fullName>
        <active>true</active>
        <label>AGGR Child Record</label>
    </recordTypes>
    <recordTypes>
        <fullName>Aggregated_Project</fullName>
        <active>true</active>
        <label>Aggregated Project</label>
    </recordTypes>
    <recordTypes>
        <fullName>Incentive_Project</fullName>
        <active>true</active>
        <label>Incentive Project</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>EnrollmentCannotInitiate</fullName>
        <active>false</active>
        <description>If the Project Manager field is blank do not allow DTW to Initiated Enrollment Process</description>
        <errorConditionFormula>AND(NOT(ISNULL(DTWAdminInitiated__c)),  ProjectManager__c = &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>ProjectManager__c</errorDisplayField>
        <errorMessage>Cannot initiate Enrollment process if the Project Manager field is blank.</errorMessage>
    </validationRules>
</CustomObject>